--- a/index.html
+++ b/index.html
@@ -549,10 +549,10 @@
       <section class="footer__share">
         <h4 class="footer__share-title">دنبال کن!</h4>
         <div class="footer__share-box">
-          <a class="footer__share-link" href="https://instagram.com/designed_by_mahdi">
+          <a class="footer__share-link" href="https://instagram.com/mahdi.baderloo">
             <i class="fa fa-instagram footer__share-icon"></i>
           </a>
-          <a class="footer__share-link" href="https://t.me/m_14_14">
+          <a class="footer__share-link" href="https://t.me/mahdibaderloo">
             <i class="fa fa-telegram footer__share-icon"></i>
           </a>
           <a class="footer__share-link" href="https://twitter.com">
